[package]
name = "reweather-esp32"
version = "0.1.0"
authors = ["Myst33d <notmyst33d@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
lto = "fat"

[profile.release.build-override]
codegen-units = 1
opt-level = "z"
strip = "symbols"

[profile.dev]
debug = true
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.1"
embedded-svc = "0.24.0"
embedded-hal = "1.0.0-alpha.9"

[build-dependencies]
embuild = "0.30.4"
